--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
+    "axios": "^1.4.0",
+    "tailwindcss": "3.3.2",
+    "@tanstack/react-query": "^4.32.0",
+    "@material-tailwind/react": "^2.0.6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
